<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="profile">Profile</string>
    <string name="usename">UseName</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="underline_for_follow"><u>FOLLOW</u>.</string>
    <string name="search">Search</string>
    <string name="title_activity_search_all">SearchAllActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="followers">Followers</string>
    <string name="world">World</string>
    <string name="fav">Favourite</string>
    <string name="user">User</string>
    <string name="author">Author</string>
    <string name="todo">TODO</string>
    <string name="channel_name">Channel Name</string>
    <string name="video_title">Video Title</string>
    <string name="article">Article</string>
    <string name="alluser">All User</string>
    <string name="allArticle">All Article</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t Have An Account?.Register Here</string>
    <string name="_21">21</string>
    <string name="comment">comment</string>
    <string name="follower">follower</string>
    <string name="_0">0</string>
    <string name="following">following</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="send">Send</string>
    <string name="add_a_comment">Add A comment</string>
    <string name="replies">REPLIES</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>

</resources>