<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SearchAuthorFragment"
    tools:ignore="UselessParent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout_for_search_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/linear_layout_for_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar_for_main_actvity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="18sp"
        android:textColor="#A9A9A9"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_for_of_search_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/all_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/alluser"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article"
        android:textSize="18sp"
        android:textColor="#A9A9A9"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_for_of_search_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"

     />
    <TextView
        android:id="@+id/all_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/allArticle"
        android:textColor="#000000"
        android:textSize="18sp" />
</LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>
