<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/background_color">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_button_for_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/select_photo_image_view_register"
        android:layout_marginTop="40dp"
        app:backgroundTint="#FFFF8D"
        app:borderWidth="0dp"
        android:src="@drawable/ic_pencile_foreground"
        app:elevation="6dp"
        app:fabSize="normal"
      />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_photo_image_view_register"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:civ_border_overlay="true"
        android:layout_marginBottom="36dp"
      android:src="@color/colorPrimary"

        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="32dp"
        android:layout_centerHorizontal="true"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="4dp"

        android:layout_above="@id/username_for_register"

        />
    <EditText
        android:id="@+id/email_for_registration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        android:layout_marginBottom="9dp"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="20dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_for_registration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
      android:layout_below="@+id/email_for_registration"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/custom_password_icon"
        android:imeOptions="actionDone"
        android:background="@drawable/custom_input"
android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:inputType="textPassword"
        android:autofillHints="" />
<EditText
    android:id="@+id/username_for_register"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/custom_input"
    android:drawableStart="@drawable/custom_person_icon"
  android:layout_above="@+id/email_for_registration"
    android:hint="@string/username"
    android:layout_marginVertical="17dp"
    android:inputType="textEmailAddress"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:selectAllOnFocus="true"
    android:textColorHint="@color/black"
    android:autofillHints="" />




    <Button
        android:id="@+id/sign_in_button_for_registration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_for_log_in_and_sign_in_rounded"
        android:text="@string/sign_in"
        android:textColor="@color/white"
      android:layout_below="@id/password_for_registration"
        />

    <TextView
        android:id="@+id/already_have_account_log_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />

    <ProgressBar
        android:id="@+id/progress_bar_for_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        app:layout_constraintVertical_bias="0.3" />
</RelativeLayout>
